添加粉丝接口和好友接口
