# controller/followerListController.go
@@ -14,19 +14,19 @@ import (
 
 /**
  * @Author jiang
- * @Description 关注列表接口
+ * @Description 粉丝列表接口
  * @Date 12:00 2023/2/12
  **/
 // 返回结构体
-type FollowListRespStruct struct {
+type FollowerListRespStruct struct {
 	Code     int            `json:"status_code"`
 	Msg      string         `json:"status_msg"`
 	UserList []service.User `json:"user_list"`
 }
 
 // 传入参数返回
-func FollowListResp(c *gin.Context, code int, msg string, userList []service.User) {
-	h := &FollowListRespStruct{
+func FollowerListResp(c *gin.Context, code int, msg string, userList []service.User) {
+	h := &FollowerListRespStruct{
 		Code:     code,
 		Msg:      msg,
 		UserList: userList,
@@ -35,38 +35,38 @@ func FollowListResp(c *gin.Context, code int, msg string, userList []service.Use
 	c.JSON(http.StatusOK, h)
 }
 
-// GetFollowList
-// @Summary 关注列表
+// GetFollowerList
+// @Summary 粉丝列表
 // @Tags 社交接口
 // @Param token query string true "token"
 // @Param user_id query string true "用户id"
-// @Success 200 {object} FollowListRespStruct
-// @Router /relation/follow/list/ [get]
-func GetFollowList(c *gin.Context) {
+// @Success 200 {object} FollowerListRespStruct
+// @Router /relation/follower/list/ [get]
+func GetFollowerList(c *gin.Context) {
 	// 1、获取参数
 	token := c.DefaultQuery("token", "")
 	userId := c.DefaultQuery("user_id", "")
 
 	// 2、验证参数
 	if token == "" || userId == "" {
-		FollowListResp(c, -1, "请求参数错误", []service.User{})
+		FollowerListResp(c, -1, "请求参数错误", []service.User{})
 		return
 	}
 
 	user_id, _ := strconv.Atoi(userId)
 	if user_id == 0 {
-		FollowListResp(c, -1, "请求参数错误", []service.User{})
+		FollowerListResp(c, -1, "请求参数错误", []service.User{})
 		return
 	}
 
 	cnt, err := mysql.FindUserByIdentityCount(uint64(user_id))
 	if err != nil {
 		logger.SugarLogger.Error("FindUserByIdentityCount Error：", err.Error())
-		FollowListResp(c, -1, "请求参数错误", []service.User{})
+		FollowerListResp(c, -1, "请求参数错误", []service.User{})
 		return
 	}
 	if cnt == 0 {
-		FollowListResp(c, -1, "非法用户", []service.User{})
+		FollowerListResp(c, -1, "非法用户", []service.User{})
 		return
 	}
 
@@ -74,16 +74,16 @@ func GetFollowList(c *gin.Context) {
 	t, _ := utils.GenerateToken(1, "test")
 	_, err = middlewares.AuthUserCheck(t)
 	if err != nil {
-		FollowListResp(c, -1, "无效token", []service.User{})
+		FollowerListResp(c, -1, "无效token", []service.User{})
 		return
 	}
 
 	// 4、将数据传入service层
-	data, err := service.FollowListService(c, uint64(user_id))
+	data, err := service.FollowerListService(c, uint64(user_id))
 	if err != nil {
-		FollowListResp(c, -1, "获取关注列表失败", []service.User{})
+		FollowerListResp(c, -1, "获取粉丝列表失败", []service.User{})
 		return
 	}
 
-	FollowListResp(c, 0, "获取关注列表成功", data)
+	FollowerListResp(c, 0, "获取粉丝列表成功", data)
 }
